uploaded mudpitblues.jpg and alumobsidianselfie.jpg and added to newsave.html, fixed spacing issue in main.css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2023,6 +2023,10 @@ ul.menu li:first-child {
 
 /* Wrappers */
 
+.wrapper {
+	padding: 0 15px 40px 15px;
+}
+
 #header-wrapper {
 	padding: 4.5em 0 3em 0;
 }
